test/good/uni.paka
--- main.paka

animals = sys.import("animals.paka");

tab.each(animals) {
    io.print($0, ": ", $1);
};

--- animals.paka

return {
    "cow": "\c{COW}",
    "pig": "\c{PIG}",
    "hen": "\c{CHICKEN}",
};
